Java 16 - JEP-390, JEP-386, JEP-387, JEP-388, and JEP-389 description.